--- a/CarsPartsReconstruccion/Views/Service/_ServiceList.cshtml
+++ b/CarsPartsReconstruccion/Views/Service/_ServiceList.cshtml
@@ -1,74 +1,74 @@
 ﻿@model IPagedList<CarsPartsReconstruccion.Models.Service>
 
 <div id="restaurantList">
-    @if (string.IsNullOrEmpty(ViewBag.NoElementsAdvise))
-    {
-        <div class="pagedList" data-carpart-target="#restaurantList">
+    @*@if (string.IsNullOrEmpty(ViewBag.NoElementsAdvise))
+        {*@
+    <div class="pagedList" data-carpart-target="#restaurantList">
 
-            @Html.PagedListPager(Model, page => Url.Action("Index", new { page }),
+        @Html.PagedListPager(Model, page => Url.Action("Index", new { page }),
                                     PagedListRenderOptions.MinimalWithItemCountText)
-        </div>
-        <table>
+    </div>
+    <table>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model[0].customerId)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model[0].serviceDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model[0].employeeId)
+            </th>
+
+            <th>
+                @Html.DisplayNameFor(model => model[0].serviceDescription)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model[0].statusId)
+            </th>
+
+            <th></th>
+        </tr>
+
+        @foreach (var item in Model)
+        {
             <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model[0].customerId)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model[0].serviceDate)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model[0].employeeId)
-                </th>
-
-                <th>
-                    @Html.DisplayNameFor(model => model[0].serviceDescription)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model[0].statusId)
-                </th>
-
-                <th></th>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Customer.customerName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.serviceDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Employee.employeeName)
+                </td>
+                @*<td>
+                        @Html.DisplayFor(modelItem => item.estimatedPrice)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.realPrice)
+                    </td>*@
+                <td>
+                    @Html.DisplayFor(modelItem => item.serviceDescription)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Catalog.catalogValue)
+                </td>
+                @*<td>
+                        @Html.DisplayFor(modelItem => item.statusObservations)
+                    </td>*@
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.serviceId }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.serviceId }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.serviceId })
+                </td>
             </tr>
-
-            @foreach (var item in Model)
-            {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Customer.customerName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.serviceDate)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Employee.employeeName)
-                    </td>
-                    @*<td>
-                            @Html.DisplayFor(modelItem => item.estimatedPrice)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.realPrice)
-                        </td>*@
-                    <td>
-                        @Html.DisplayFor(modelItem => item.serviceDescription)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Catalog.catalogValue)
-                    </td>
-                    @*<td>
-                            @Html.DisplayFor(modelItem => item.statusObservations)
-                        </td>*@
-                    <td>
-                        @Html.ActionLink("Edit", "Edit", new { id = item.serviceId }) |
-                        @Html.ActionLink("Details", "Details", new { id = item.serviceId }) |
-                        @Html.ActionLink("Delete", "Delete", new { id = item.serviceId })
-                    </td>
-                </tr>
-            }
-        </table>
-    }
-    else
-    {
-        <h2>@ViewBag.NoElementsAdvise</h2>
-    }
+        }
+    </table>
+    @*}
+        else
+        {
+            <h2>@ViewBag.NoElementsAdvise</h2>
+        }*@
 
 </div>
