just two deletes
just two deletes

--- a/CarsPartsReconstruccion/Views/Service/Index.cshtml
+++ b/CarsPartsReconstruccion/Views/Service/Index.cshtml
@@ -24,9 +24,7 @@
         <input type="submit" value="Search By Customer" />
     }*@
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+<p>@Html.ActionLink("Create New", "Create")</p>
 
 @Html.Partial("_ServiceList", Model)
 
