--- a/CarsPartsReconstruccion/Views/Service/Index.cshtml
+++ b/CarsPartsReconstruccion/Views/Service/Index.cshtml
@@ -24,7 +24,7 @@
         <input type="submit" value="Search By Customer" />
     }*@
 
-<p>@Html.ActionLink("Create New", "Create")</p>
+@Html.ActionLink("Create New", "Create")
 
 @Html.Partial("_ServiceList", Model)
 
