--- a/CarsPartsReconstruccion/Views/SupplierPart/IndexPart.cshtml
+++ b/CarsPartsReconstruccion/Views/SupplierPart/IndexPart.cshtml
@@ -45,5 +45,5 @@
     </table>*@
 
 <p>
-    @Html.ActionLink("Back to Pieces", "Index", "Part")
+    @Html.ActionLink("Back to Parts", "Index", "Part")
 </p>
