showing the parts of the service
showing the parts of the service

--- a/CarsPartsReconstruccion/Content/StylePreferences.css
+++ b/CarsPartsReconstruccion/Content/StylePreferences.css
@@ -1,7 +1,7 @@
 ﻿th {
     color: #04126e;
     background-color: #b7d0e9;
-    text-align: center;
+    text-align: left;
     /*border: #4e95f4 2px solid;*/
 }
 
