--- a/CarsPartsReconstruccion/Views/Service/Details.cshtml
+++ b/CarsPartsReconstruccion/Views/Service/Details.cshtml
@@ -74,3 +74,4 @@
 
 @Html.Action("ServiceCars", "ServiceCar", new { serviceId = Model.serviceId })
 
+@Html.Action("ServiceParts", "ServicePart", new { serviceId = Model.serviceId })
