showing the replaced pieces
showing the replaced pieces

--- a/CarsPartsReconstruccion/Views/ServicePart/_ServicePart.cshtml
+++ b/CarsPartsReconstruccion/Views/ServicePart/_ServicePart.cshtml
@@ -66,6 +66,8 @@
                     @Html.ActionLink("Delete", "Delete", new { id = item.servicePartId })
                 </td>*@
         </tr>
+
+        @Html.Action("ReplacedPieces", "ReplacedPiece", new { servicePartId = item.servicePartId })
     }
 
 </table>
